# btwattch2_test

./: data_handler.py  find_dev.py  get_dev_model.py  get_dev_svcs.py  notification_test.py  pyproject.toml  read_test.py  service_explorer.py  set_date.py  test.py  utils.py  watt_check.py  watt_test.py
